# rust_readfile_tests

./: Cargo.toml  README.md  some_1kb_file.txt
.github/workflows/: rust.yml
src/: main.rs
